--- a/five.html
+++ b/five.html
@@ -1,4 +1,3 @@
-<!-- Problem 5 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
-            const states = ["California", "Texas", "Florida", "New York", "Illinois", "Pennsylvania", "Ohio", "Georgia", "North Carolina", "Michigan"];
+            const states = ["Massachusetts", "New Hamshire", "Rhode Island", "Maine", "Connecticut", "Vermont", "New York", "New Jersey", "North Carolina", "Maryland"];
             states.forEach(state => {
                 $("#stateSelect").append(`<option value="${state}">${state}</option>`);
             });
